--- a/public/styles.css
+++ b/public/styles.css
@@ -118,7 +118,7 @@ a {
 
 .surah-item:hover {
     transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3), 0 0 15px rgba(85, 197, 122, 0.6);
+    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
 
 .surah-number-container {
